@@ -39,6 +39,13 @@ namespace Orthanc
 #if ORTHANC_BUILDING_FRAMEWORK_LIBRARY == 1
     // Alias for binary compatibility with Orthanc Framework 1.7.2 => don't use it anymore
     void Add(ParsedDicomFile& dicom);
+
+    void ToJson(Json::Value& target,
+                bool simplify) const;
+
+    void ToJson(Json::Value& target,
+                size_t index,
+                bool simplify) const;
 #endif
 
   public:
@@ -72,11 +79,11 @@ namespace Orthanc
     DcmDataset* ExtractDcmDataset(size_t index) const;
 
     void ToJson(Json::Value& target,
-                bool simplify) const;
+                DicomToJsonFormat format) const;
 
     void ToJson(Json::Value& target,
                 size_t index,
-                bool simplify) const;
+                DicomToJsonFormat format) const;
 
     bool IsComplete() const;
 
